WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48293
Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.fill.destination-in.html
https://bugs.webkit.org/show_bug.cgi?id=48293
Summary
Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.fill.destination-i...
Mike Lawther
Reported
2010-10-25 22:22:32 PDT
This layout tests fails. See master bug:
https://bugs.webkit.org/show_bug.cgi?id=46506
Attachments
Proposed fix: Add CompositeDestinationIn to the 'display transparency elsewhere' list
(12.44 KB, patch)
2011-06-09 19:36 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
Proposed fix: Same as previously with a comment about destination-out.
(12.64 KB, patch)
2011-06-13 11:20 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2011-06-09 19:36:24 PDT
Created
attachment 96690
[details]
Proposed fix: Add CompositeDestinationIn to the 'display transparency elsewhere' list
Julien Chaffraix
Comment 2
2011-06-13 11:20:16 PDT
Created
attachment 96979
[details]
Proposed fix: Same as previously with a comment about destination-out.
James Robinson
Comment 3
2011-06-14 15:00:37 PDT
Comment on
attachment 96979
[details]
Proposed fix: Same as previously with a comment about destination-out. I think you'll need to update the pixel baselines for at least canvas-composited.html (note that there are 7 different -expected.png files for this). Could you add = IMAGE lines for chromium's test_expectations.txt at least so this doesn't make the bots red, and then rebaseline after landing? The other ports don't run pixel tests on the bots so it's very difficult to update expectations for those. Other than that this looks great.
Julien Chaffraix
Comment 4
2011-06-14 19:00:20 PDT
Comment on
attachment 96979
[details]
Proposed fix: Same as previously with a comment about destination-out.
> I think you'll need to update the pixel baselines for at least canvas-composited.html (note that there are 7 different -expected.png files for this). Could you add = IMAGE lines for chromium's test_expectations.txt at least so this doesn't make the bots red, and then rebaseline after landing? The other ports don't run pixel tests on the bots so it's very difficult to update expectations for those.
Actually it is already in the test_expectations.txt (see
bug 61470
) due to the anti-aliasing when clipping out.
WebKit Review Bot
Comment 5
2011-06-14 19:40:38 PDT
Comment on
attachment 96979
[details]
Proposed fix: Same as previously with a comment about destination-out. Clearing flags on attachment: 96979 Committed
r88896
: <
http://trac.webkit.org/changeset/88896
>
WebKit Review Bot
Comment 6
2011-06-14 19:40:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug