2011-06-14  Julien Chaffraix  <jchaffraix@webkit.org>

Reviewed by James Robinson.

        Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.fill.destination-in.html
        https://bugs.webkit.org/show_bug.cgi?id=48293

        And

        Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.pattern.destination-in.html
        https://bugs.webkit.org/show_bug.cgi?id=48303

        * canvas/philip/tests/2d.composite.uncovered.pattern.destination-in-expected.txt:
        Added a trailing line.

        * fast/canvas/canvas-composite-alpha.html:
        Updated now that we clear what is outside the source.

        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac/Skipped:
        * platform/qt/Skipped:
        Update platform skipped lists.
2011-06-14  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by James Robinson.

        Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.fill.destination-in.html
        https://bugs.webkit.org/show_bug.cgi?id=48293

        And

        Fix LayoutTests/canvas/philip/tests/2d.composite.uncovered.pattern.destination-in.html
        https://bugs.webkit.org/show_bug.cgi?id=48303

        * html/canvas/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::shouldDisplayTransparencyElsewhere): Added CompositeDestinationIn
        as this is the only one that needs a specific treatment.

Canonical link: https://commits.webkit.org/78248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88896 268f45cc-cd09-0410-ab3c-d52691b4dbfc